# CFD-2D-NS-FV

./: CMakeLists.txt  CMakePresets.json  README.md  input.in  main.cpp  simple_grid.in
code/: cell_gradient.cpp  class_f.hpp  class_flow.hpp  class_mesh.hpp  class_q.hpp  flowvariables.cpp  input.in  main  main.cpp  minmod.cpp  post_process.cpp  read_inputs.cpp  readmesh.cpp  reconstruction.cpp  res.cpp  roe_flux.cpp  rusanov.cpp  save_sol.cpp  squeeze.cpp  ssp_rk2.cpp  ssp_rk3.cpp  struct_BC.hpp  struct_inputs.hpp  struct_report.hpp  struct_residual.hpp  struct_size.hpp  struct_time.hpp
config/cgns/include/: cgnsBuild.defs
contrib/cgnslib/include/: cgnsBuild.defs  cgnsconfig.h
contrib/cgnslib/lib/: libcgns.so.4.5
contrib/cgnslib/lib/cmake/cgns/: cgns-config.cmake  cgns-targets-release.cmake  cgns-targets.cmake
contrib/hdf5/cmake/: hdf5-config.cmake  hdf5-targets-release.cmake  hdf5-targets.cmake
contrib/hdf5/include/: H5pubconf.h
contrib/hdf5/lib/: libhdf5.settings  libhdf5_hl.so.310  libhdf5_hl.so.310.0.6  libhdf5_tools.so.310  libhdf5_tools.so.310.0.6
contrib/hdf5/lib/pkgconfig/: hdf5.pc  hdf5_hl.pc
contrib/zlib/lib/: libz.so.1.3.1
contrib/zlib/share/pkgconfig/: zlib.pc
src/: cell_gradient.cpp  class_q.hpp  main.cpp  post_process.cpp  read_inputs.cpp  readmesh.cpp  reconstruction.cpp  res.cpp  struct_inputs.hpp  struct_report.hpp  struct_time.hpp  writecgns.cpp
src/base/: main.cpp  post_process.cpp  read_inputs.cpp  readcgns.cpp  readmesh.cpp  rusanov.hpp  save_sol.cpp
src/cgns-read/: meshReader.hpp
src/cgns-read/include/: readMeshBase.hpp  readStructuredMesh.hpp  readUnstructuredMesh.hpp  types.hpp
src/cgns-read/src/: CMakeLists.txt  readMeshBase.cpp  readStructuredMesh.cpp  readUnstructuredMesh.cpp
src/cuda/: CMakeLists.txt  cuda.cu  cuda.cuh  kernels.cu  rusanov.cu
src/head/: reconstruction.hpp  rusanov.hpp
src/include/: cell_gradient.hpp  res.hpp  squeeze.hpp  ssp_rk3.hpp
src/solver/: CMakeLists.txt  cell_gradient.cpp  minmod.cpp  reconstruction.cpp  res.cpp  roe_flux.cpp  rusanov.cpp  squeeze.cpp  ssp_rk2.cpp  ssp_rk3.cpp
src/support/: class_flow.hpp  class_residual.hpp  struct_size.hpp
